--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Este repositorio contiene el código fuente del taller de MedellinJS sobre cómo crear un carrito de compras con NodeJS / Express / MongoDB",
   "main": ".eslintrc.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "errorhandler": "^1.5.1",
+    "express": "^4.17.1",
+    "method-override": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
