--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "compression": "^1.7.4",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
