--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
+    "mongoose": "^5.6.0",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
