--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "crypto": "^1.0.1",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.6.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
