--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": ".eslintrc.js",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "composable-middleware": "^0.3.0",
     "compression": "^1.7.4",
     "crypto": "^1.0.1",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
