--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "body-parser": "^1.19.0",
     "composable-middleware": "^0.3.0",
     "compression": "^1.7.4",
+    "connect-mongo": "^2.0.3",
     "crypto": "^1.0.1",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
+    "express-session": "^1.16.2",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.6.0",
